View application page added

--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@ body,
 
 /* Half Page Carousel itself*/
 .container1 {
-  background: linear-gradient(to right bottom, var(--blue), var(--blue-dark));
-  height: 140%;
+  background: var(--main-background);
+  height: 100vw;
   width: 100vw;
 }
 
@@ -69,7 +69,9 @@ body,
     box-sizing: border-box;
     transition: all 200ms;
   }
-
+body{
+  background-color: var(--main-background);
+}
 
 
   h1 {
@@ -105,8 +107,6 @@ body,
     top: 29%;
     left: 15%;
     transform: translate(-50%, -50%);
-
-
     box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.4);
     border-radius: 3px;
   }
@@ -139,23 +139,24 @@ form input:invalid {
 .customcard {
   background: var(--main-background);
   /* To center the customcard */
-  position: absolute;
-  top: 70%;
-  left: 50%;
+margin: auto;
+margin-top: 10em;
   width:30em;
-  transform: translate(-50%, -50%);
+
   box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.4);
   border-radius: 3px;
 }
 .customcardlogin {
   background: var(--main-background);
   /* To center the customcard */
-  position: absolute;
 
-  top: 50%;
-  left: 50%;
+
+margin:auto;
+margin-top: 10em;
+
+
   width:30em;
-  transform: translate(-50%, -50%);
+
   box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.4);
   border-radius: 3px;
 }
@@ -255,4 +256,7 @@ form input {
   width:70%;
 
   transform: translate(-50%, -50%);
+}
+.job_detail{
+  color: #5d1378;
 }
